--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,9 +1,13 @@
 <div class="container">
   <h3>The Shoppies</h3>
-  <div class="row form-group card shadow">
+  <div class="form-group card shadow" id="movie-title">
     <label for="title">Movie title:</label>
-    <input type="text" class="form-control" id="title" formControlName="title">
+    <div class="input-icons">
+      <i class="fa fa-search icon" ></i>
+      <input class="input-field" type="text" class="form-control" id="title" formControlName="title">
+    </div>
   </div>
+
   <div class="row">
     <div class="col card shadow">
 
