--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -6,6 +6,7 @@
       <i class="fa fa-search icon" ></i>
       <input class="input-field" type="text" class="form-control" id="title" formControlName="title">
     </div>
+    <button type="submit" class="btn btn-dark" (click)="onSubmit()">Search</button>
   </div>
 
   <div class="row">
